--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "openai": "^4.56.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "telegraf": "^4.16.3",
     "tslog": "^4.9.3"
   },
   "devDependencies": {
