--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^5.18.0",
+    "axios": "^1.7.5",
+    "fluent-ffmpeg": "^2.1.3",
     "openai": "^4.56.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
