feat: update Dockerfile and docker-compose.yml
This commit updates the Dockerfile and docker-compose.yml files. It modifies the Dockerfile to use the `npx prisma migrate deploy` command instead of `npx prisma migrate dev --name init` for migration. It also updates the container name in the docker-compose.yml file from `Conventional_Commits_Helper` to `Obsdian_Teg_Bot` and changes the port mapping from `3003:3003` to `4000:4000`.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: Conventional_Commits_Helper
+    container_name: Obsdian_Teg_Bot
     ports:
-      - 3003:3003
+      - 4000:4000
     restart: always
     networks:
       - home
