--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@prisma/client": "^5.18.0",
     "axios": "^1.7.5",
     "fluent-ffmpeg": "^2.1.3",
+    "https-proxy-agent": "^7.0.5",
     "openai": "^4.56.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
