Refactor .dockerignore to ignore prisma migrations and dev.db

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,4 +1,6 @@
 # Игнорируем файлы и папки, которые не нужны для сборки образа
+/prisma/migrations/
+/prisma/dev.db
 
 
 # Игнорируем файлы сборки и конфигурации IDE
