--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ docker-compose.yml
 
 #prisma
 prisma/migraration/
+prisma/migrations/migration_lock.toml
+prisma/migrations/20240908040831_init/migration.sql
