--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,5 @@ docker-compose.yml
 prisma/migraration/
 prisma/migrations/migration_lock.toml
 prisma/migrations/20240908040831_init/migration.sql
+prisma/migrations/20240908154945_init/migration.sql
+prisma/dev.db-journal
